qc pass: p4lang: etherip over ipv6
qc pass: p4lang: gre local connect
qc pass: p4lang: polka over backplane
qc pass: p4lang: nsh over backplane
qc pass: p4lang: qinq routing
qc pass: p4lang: qinq vpls/ldp with bgp
qc pass: p4lang: qinq eompls
qc pass: p4lang: qinq pppoe routing
qc pass: p4lang: qinq pppoe mpls
qc pass: p4lang: hairpin qinq eompls
qc pass: p4lang: gre routing over qinq
qc pass: p4lang: multicast bundle qinq routing
qc pass: p4lang: mldp qinq core
qc pass: p4lang: mldp qinq egress edge
qc pass: p4lang: bier qinq core
qc pass: p4lang: qinq polka
qc pass: p4lang: l2vpn over bundle qinq mpls
qc pass: p4lang: l3vpn over bundle qinq mpls
qc pass: p4lang: qinq bridge tcpmss
---------------------------------- 2024-10-07 07:43:35 24.10.7
no todo: test hwredetect that uses some external file and a p4lang process to overcome the eth0-->eno1-->eth0 random changes, by mac and friends
---------------------------------- 2024-10-20 07:04:34 24.10.20
no qc pass: dhcp with excluded address
failed: dhcp with excluded address
---------------------------------- 2024-10-20 07:34:16 24.10.20
no failed: dhcp with excluded address
qc pass: dhcp with excluded address
---------------------------------- 2024-11-02 07:44:58 24.11.2
no qc pass: dhcp with excluded address
failed: dhcp with excluded address
---------------------------------- 2024-11-02 08:29:06 24.11.2
no failed: dhcp with excluded address
qc pass: dhcp with excluded address
---------------------------------- 2024-11-13 07:50:44 24.11.13
qc pass: p4lang: bridge filter access list
qc pass: p4lang: vlan bridge filter access list
---------------------------------- 2024-11-16 08:32:01 24.11.16
todo: traffic through bgp spf
---------------------------------- 2024-11-16 09:32:49 24.11.16
qc pass: unicast+spf over bgp
qc pass: unicast+spf over bgp with soft-reconfig
qc pass: unicast+spf over bgp with additional path
---------------------------------- 2024-11-17 18:01:02 24.11.17
qc pass: spf bgp in chain