@@ -709,6 +709,29 @@ public class userExec {
         hl.add(null, "9 .                    [rd]         route distinguisher");
         hl.add(null, "5 .            nexthop              list of nexthops");
         hl.add(null, "5 .            bestpath             best path statistics");
+        hl.add(null, "5 6            lspf                 linkstate spf statistics");
+        hl.add(null, "6 .              spf                information about last spf");
+        hl.add(null, "6 .              tree               tree about last spf");
+        hl.add(null, "6 7              othertree          tree of other node");
+        hl.add(null, "7 .                <addr>           other node to view");
+        hl.add(null, "6 7              othertopology      topology of other node");
+        hl.add(null, "7 8,.              <addr>           other node to view");
+        hl.add(null, "8 .                  [addr]         node to view");
+        hl.add(null, "6 7,.            graph              graph about last spf");
+        hl.add(null, "7 7,.              nocli            skip cli commands");
+        hl.add(null, "7 7,.              nosvg            skip svg commands");
+        hl.add(null, "7 7,.              nonets           skip connected networks");
+        hl.add(null, "7 7,.              noints           skip connected interfaces");
+        hl.add(null, "6 7,.            lnkinconsistent    inconsistent advertisements of metrics");
+        hl.add(null, "7 .                [str]            int matcher");
+        hl.add(null, "6 7,.            nhinconsistent     inconsistent advertisements of next hops");
+        hl.add(null, "7 .                [str]            int matcher");
+        hl.add(null, "6 7,.            topology           topology about last spf");
+        hl.add(null, "7 .                [addr]           node to view");
+        hl.add(null, "6 7,.            route              list of routes in database");
+        hl.add(null, "7 .                [addr]           prefix to view");
+        hl.add(null, "6 7,.            originate          list of routes originated locally");
+        hl.add(null, "7 .                [addr]           prefix to view");
         hl.add(null, "5 .            messages             message statistics");
         hl.add(null, "5 .            attributes           attribute statistics");
         hl.add(null, "5 .            graceful-restart     list of graceful restart");
