@@ -10,7 +10,7 @@
 </style>
 <title>tester</title></head><body>
 release: freeRouter v24.11.17-cur, done by sprscc13@mrn0b0dy.<br/>
-tested: 2024-11-17 18:15:31, took 00:14:28, with 50 workers, on 3530 cases, 0 failed, 0 traces, 6 retries<br/>
+tested: 2024-11-17 18:53:50, took 00:14:53, with 50 workers, on 3532 cases, 0 failed, 0 traces, 2 retries<br/>
 jvm: ./rtr.bin<br/>
 <br/>
 <table><thead><tr><td><b>file</b></td><td><b>result</b></td><td><b>test</b></td></tr></thead><tbody>
@@ -3036,6 +3036,8 @@ jvm: ./rtr.bin<br/>
 <tr><td><a href="http://sources.freertr.org/cfg/rout-bgp861.tst">rout-bgp861.tst</a></td><td>success</td><td>unicast+spf over bgp with soft-reconfig</td></tr>
 <tr><td><a href="http://sources.freertr.org/cfg/rout-bgp862.tst">rout-bgp862.tst</a></td><td>success</td><td>unicast+spf over bgp with additional path</td></tr>
 <tr><td><a href="http://sources.freertr.org/cfg/rout-bgp863.tst">rout-bgp863.tst</a></td><td>success</td><td>spf bgp in chain</td></tr>
+<tr><td><a href="http://sources.freertr.org/cfg/rout-bgp864.tst">rout-bgp864.tst</a></td><td>success</td><td>spf bgp prefix withdraw</td></tr>
+<tr><td><a href="http://sources.freertr.org/cfg/rout-bgp865.tst">rout-bgp865.tst</a></td><td>success</td><td>spf bgp change in metric</td></tr>
 <tr><td><a href="http://sources.freertr.org/cfg/rout-eigrp01.tst">rout-eigrp01.tst</a></td><td>success</td><td>eigrp point2point connection</td></tr>
 <tr><td><a href="http://sources.freertr.org/cfg/rout-eigrp02.tst">rout-eigrp02.tst</a></td><td>success</td><td>eigrp point2multipoint connection</td></tr>
 <tr><td><a href="http://sources.freertr.org/cfg/rout-eigrp03.tst">rout-eigrp03.tst</a></td><td>success</td><td>eigrp point2point chain</td></tr>
